# sqlite-ext-core

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  valgrind.supp
src/: lib.rs
tests/integration/: Makefile
tests/integration/go_loader/: go.mod  lazy_load.go  main.go
tests/integration/rust_extension/: Cargo.toml  leak_check.c
tests/integration/rust_extension/src/: lib.rs
